Backend support for Assume role Policy / managed policy
