# consoleme/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-10-22T15:53:06+00:00
+#   timestamp: 2020-10-23T15:35:54+00:00
 
 from __future__ import annotations
 
@@ -192,7 +192,6 @@ class ManagedPolicyChangeModel(ChangeModel):
     arn: constr(
         regex="(^arn:([^:]*):([^:]*):([^:]*):(|\*|[\d]{12}|cloudfront|aws):(.+)$)|^\*$"
     )
-    policy_name: str
     change_type: Optional[constr(regex="managed_policy")] = None
     action: Action1
 
